# Song-Evaulation-System

./: .gitignore  Dockerfile  README.md  changes1.patch  changes2.patch  docker-compose.yml  pyproject.toml  requirements.txt
.history/: requirements_20240408145550.txt
.history/notebooks/: ref_code_20240331101913.py  ref_code_20240331101922.py  ref_code_20240407093325.py  ref_code_20240407093349.py  ref_code_20240407093355.py
.history/notes/: Research papers_20240323155542.md  Research papers_20240323155629.md  Research papers_20240323155734.md  Research papers_20240323155824.md  Research papers_20240323155834.md  Research papers_20240323155840.md  Research papers_20240323160504.md  Research papers_20240323160543.md  Research papers_20240323160625.md  Research papers_20240323162139.md  Research papers_20240323162143.md  Research papers_20240323162155.md  Research papers_20240323162205.md  Research papers_20240323162215.md  Research papers_20240323173253.md  Research papers_20240323173321.md  Research papers_20240323183028.md  (+11 more)
calibration/: bootstrap_manifest.json
model/: vocals.json
notebooks/: getting_training_data.ipynb  scoring_sys.ipynb  usingopenl3.ipynb
notes/: (fail)audioembeddings_method.md  approaches_to_songeval_sys.md  basic-steps.md  eval.md  neuralnetarch.md  usingf0.md
ref_files/: evaluation_page.py  main_script.py
research/: determining_score.ipynb  scoring_sys.ipynb
web_app_files/: home_page.py  main_script.py  results_page.py
webapp/: Main_Page.py  __init__.py  app_paths.py  eval_code.py  streamlit_runtime.py
webapp/core/: __init__.py  (+3 more)
(+306 files in other folders)
