[project]
name = "song-evaluation-system"
version = "0.1.0"
description = "Streamlit app for singing performance evaluation using vocal separation and acoustic features"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openunmix",
  "torch",
  "torchaudio",
  "librosa",
  "numpy",
  "soundfile",
  "scipy",
  "pandas",
  "streamlit",
  "matplotlib",
]

[tool.uv]
package = false
